Quick overflow table fix

--- a/project/client/static/style.css
+++ b/project/client/static/style.css
@@ -28,6 +28,9 @@ img {background-size: contain;width: 100%; height: auto;}
 .mobile #fileval {padding-bottom: 5px;}
 .mobile #form1 {text-align: center;}
 .responsive-img {
-    max-width: 100%;
-    height: auto;
+  max-width: 100%;
+  height: auto;
+}
+.card-body {
+  overflow: scroll;
 }
